Fix vertical scrollbars

--- a/applications/vessel-history/src/App.css
+++ b/applications/vessel-history/src/App.css
@@ -20,7 +20,7 @@
 
 #root,
 .content {
-  height: 100%;
+  height: 100vh;
 }
 
 .content {
